html br and hr tag used

--- a/Html text formatting/html-text-formatting.html
+++ b/Html text formatting/html-text-formatting.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>HTML Text Formatting</h1>
-    <p>Lorem ipsum dolor, <b title="bold text">sit amet consectetur adipisicing elit.</b> Nam nobis officiis, <i title="italic text">itaque odit tenetur</i> dolore rem vero <u title="underline text">adipisci unde ex aliquam</u> numquam, <em title="emphasis text">qui repudiandae.</em> Maxime eum quas <i title="bold and italic"><b>incidunt dolor eos!</b></i></p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore temporibus odit <del title="delete text"> ratione exercitationem dignissimos soluta,</del> quaerat libero animi corporis! Facilis ullam ducimus quod iste dolores provident <strong><sub title="strong subscript text">totam</sub></strong> , saepe <b><sup title="bold superscript text">facere</sup></b> perferendis?</p>
+    <hr size="1px" color="lightgray">
+    <p>Lorem ipsum dolor, <b title="bold text">sit amet consectetur adipisicing elit. <br>
+    </b> Nam nobis officiis, <i title="italic text">itaque odit tenetur</i> dolore rem vero <u title="underline text">adipisci unde ex aliquam</u> numquam, <em title="emphasis text">qui repudiandae.</em> Maxime eum quas <i title="bold and italic"><b>incidunt dolor eos!</b></i></p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore temporibus odit <del title="delete text"> ratione exercitationem dignissimos soluta,</del> quaerat libero animi corporis! <br><br>
+    Facilis ullam ducimus quod iste dolores provident <strong><sub title="strong subscript text">totam</sub></strong> , saepe <b><sup title="bold superscript text">facere</sup></b> perferendis?</p>
 </body>
 </html>
