edited different types of ordered list

--- a/Html text formatting/list-and-buttons.html
+++ b/Html text formatting/list-and-buttons.html
@@ -46,14 +46,26 @@
     <h3>Different types of Ordered list</h3>
     <ol type="1">
         <li>First list item with numbers</li>
+        <li>Second list item with numbers</li>
+        <li>Third list item with numbers</li>
+        <li>Fourth list item with numbers</li>
     </ol>
     <ol type="a">
+        <li>First list item with small letters</li>
         <li>Second list item with small letters</li>
+        <li>Third list item with small letters</li>
+        <li>Fourth list item with small letters</li>
     </ol>
     <ol type="i">
+        <li>First list item with roman symbols</li>
+        <li>Second list item with roman symbols</li>
         <li>Third list item with roman symbols</li>
+        <li>Fourth list item with roman symbols</li>
     </ol>
     <ol type="A">
+        <li>First list item with capital letters</li>
+        <li>Second list item with capital letters</li>
+        <li>Third list item with capital letters</li>
         <li>Fourth list item with capital letters</li>
     </ol>
 
