--- a/CSS-Text/Text-styling.html
+++ b/CSS-Text/Text-styling.html
@@ -1,25 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
     <title>Styling text with css</title>
     <style>
-        h3{
-            color: darkblue;
+        *{
+            font-family: 'poppins',Verdana, Geneva, Tahoma, sans-serif;
         }
-        p{
+        h3 {
+            color: darkblue;
+            font-style: normal;
+        }
+
+        p {
             background-color: aliceblue;
+            font-size: 1rem;
+            font-weight: 400;
+        }
+
+        a {
+            text-decoration: none;
+            color: #137856;
+            background-color: #cffdee;
         }
     </style>
 </head>
+
 <body>
-    <h1>CSS Text: text color, text alignment,text decoration,font size, font family, font-style</h1>
+    <h1 style="text-align: center;">CSS Text: text color, text alignment,text decoration,font size, font family,
+        font-style</h1>
     <hr size="1px" color="lightgray">
     <h3 style="background-color: antiquewhite;">Adding background color, changing text color using inline CSS</h3>
-    <p style="color: steelblue;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint cum magnam dignissimos quis voluptatum pariatur suscipit consectetur harum eligendi voluptate similique obcaecati commodi repellendus exercitationem fuga dolorem, aliquid, veritatis ullam.</p>
+    <p style="color: steelblue;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint cum magnam dignissimos
+        quis voluptatum pariatur suscipit consectetur harum eligendi voluptate similique obcaecati commodi repellendus
+        exercitationem fuga dolorem, aliquid, veritatis ullam.</p>
 
     <h3>Adding background color and text color using internal CSS</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe dolor corporis asperiores fugiat recusandae fugit architecto dolorem cum est cupiditate inventore distinctio nam non totam, voluptatem sint facere repudiandae! Incidunt!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe dolor corporis asperiores fugiat recusandae fugit
+        architecto dolorem cum est cupiditate inventore distinctio nam non totam, voluptatem sint facere repudiandae!
+        Incidunt!</p>
+    <a href="../Html-form/info-form.html">Go to Html form page</a>
 </body>
+
 </html>
