--- a/CSS-image/image.html
+++ b/CSS-image/image.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS images</title>
     <link rel="stylesheet" href="../CSS-Styles/image.css">
 </head>
+
 <body>
-    <h1>CSS Background color, image, repeat, position, size, relative image path</h1>
+    <h1 class="head m-10 p-10">CSS Background color, image, repeat, position, size, relative image path</h1>
+    <div class="container m-10">
+        <h2 class="head-2 m-10 p-10">Adding background-color, image in an html element</h2>
+        <p class="text-1 m-10 p-10">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus corporis recusandae blanditiis impedit vitae totam nostrum reprehenderit deleniti reiciendis? Eaque eius recusandae corrupti alias temporibus impedit ex quos consequatur veniam!</p>
+        <button class="btn m-10 p-10">Call to Action</button>
+    </div>
 </body>
+
 </html>
