used box shadow and backround repeat

--- a/CSS-image/image.html
+++ b/CSS-image/image.html
@@ -15,6 +15,11 @@
         <p class="text-1 m-10 p-10">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus corporis recusandae blanditiis impedit vitae totam nostrum reprehenderit deleniti reiciendis? Eaque eius recusandae corrupti alias temporibus impedit ex quos consequatur veniam!</p>
         <button class="btn m-10 p-10">Call to Action</button>
     </div>
+    <div class="box-2 m-10">
+        <h2 class="head-2 m-10 p-10">Adding background-color, image in an html element</h2>
+        <p class="text-1 m-10 p-10">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus corporis recusandae blanditiis impedit vitae totam nostrum reprehenderit deleniti reiciendis? Eaque eius recusandae corrupti alias temporibus impedit ex quos consequatur veniam!</p>
+        <button class="btn m-10 p-10">Click here</button>
+    </div>
 </body>
 
 </html>
