linked audio video files in assets folder to html file

--- a/Html5-Basics/audio-video.html
+++ b/Html5-Basics/audio-video.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>HTML5 vs HTML, Audio, video, youtube video, embed iframe</h1>
+    <h2>Html 5 Audio with controls</h2>
+    <audio src="../Assets/Audios/Pufino.mp3" controls></audio>
+    <h2>Html 5 video from the local folder</h2>
+    <video src="../Assets/Videos/pexels-film-composite.mp4" width="70%"></video>
 </body>
 </html>
