used iframe tag to link a video from youtube

--- a/Html5-Basics/audio-video.html
+++ b/Html5-Basics/audio-video.html
@@ -11,5 +11,7 @@
     <audio src="../Assets/Audios/Pufino.mp3" controls></audio>
     <h2>Html 5 video from the local folder</h2>
     <video src="../Assets/Videos/pexels-film-composite.mp4" width="70%"></video>
+    <h2>Using iframe to use video from another source</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/mzPxo7Y6JyA?si=hfTN61Wstxj7XZhq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
