used reset and submit button in form

--- a/Html-form/html5-form.html
+++ b/Html-form/html5-form.html
@@ -84,7 +84,8 @@
                     <h3>Write your message here:</h3>
                     <textarea name="message" id="" cols="45" rows="5"></textarea>
                 </label>
-                
+                <input type="reset" value="Reset">
+                <input type="submit" value="Submit">
             </form>
         </section>
     </main>
