--- a/Html-form/html5-form.html
+++ b/Html-form/html5-form.html
@@ -80,10 +80,10 @@
                         Rosogolla
                     </label>
                 </fieldset>
-                <label for="text">
-                    <h3>Write your message here:</h3>
-                    <textarea name="message" id="" cols="45" rows="5"></textarea>
-                </label>
+                <fieldset>
+                    <legend>Give us your valuable feedback</legend>
+                    <textarea name="message" id="" cols="45" rows="5" placeholder="write your message..."></textarea>
+                </fieldset>
                 <input type="reset" value="Reset">
                 <input type="submit" value="Submit">
             </form>
