added css style to table.html

--- a/Html-table/table.html
+++ b/Html-table/table.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html table</title>
-    
+    <link rel="stylesheet" href="../CSS-Styles/table.css">
 </head>
 <body>
     <h1>HTML Table Table, tr, th, td, caption, colspan, thead, tbody, tfoot
