added html code for basic navbar

--- a/Html-table/table.html
+++ b/Html-table/table.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="../CSS-Styles/table.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../Html-table/table.html">Table</a></li>
+                <li><a href="../Html5-Basics/audio-video.html">Video</a></li>
+                <li><a href="../CSS-image/image.html">Image</a></li>
+                <li><a href="../Html-form/html5-form.html">Form</a></li>
+            </ul>
+        </nav>
+    </header>
+    <hr size="1" color="lightgray">
     <h1>HTML Table Table, tr, th, td, caption, colspan, thead, tbody, tfoot
     </h1>
     <hr size="1" color="lightgray"><br>
