added another link in the navbar

--- a/Html-table/table.html
+++ b/Html-table/table.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html table</title>
     <link rel="stylesheet" href="../CSS-Styles/table.css">
+    <link rel="stylesheet" href="../CSS-Styles/navbar.css">
 </head>
 <body>
     <header>
@@ -14,6 +15,7 @@
                 <li><a href="../Html5-Basics/audio-video.html">Video</a></li>
                 <li><a href="../CSS-image/image.html">Image</a></li>
                 <li><a href="../Html-form/html5-form.html">Form</a></li>
+                <li><a href="../Html text formatting/heading-and-paragraph.html">Html</a></li>
             </ul>
         </nav>
     </header>
