added navbar in audio-video.html

--- a/Html5-Basics/audio-video.html
+++ b/Html5-Basics/audio-video.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Html-5 audio video</title>
+    <link rel="stylesheet" href="../CSS-Styles/navbar.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../Html-table/table.html">Table</a></li>
+                <li><a href="../Html5-Basics/audio-video.html">Video</a></li>
+                <li><a href="../CSS-image/image.html">Image</a></li>
+                <li><a href="../Html-form/html5-form.html">Form</a></li>
+                <li><a href="../Html text formatting/heading-and-paragraph.html">Html</a></li>
+            </ul>
+        </nav>
+    </header>
+    <hr size="1" color="lightgray">
     <h1>HTML5 vs HTML, Audio, video, youtube video, embed iframe</h1>
     <h2>Html 5 Audio with controls</h2>
     <audio src="../Assets/Audios/Pufino.mp3" controls></audio>
