added navbar in image.html

--- a/CSS-image/image.html
+++ b/CSS-image/image.html
@@ -6,9 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS images</title>
     <link rel="stylesheet" href="../CSS-Styles/image.css">
+    <link rel="stylesheet" href="../CSS-Styles/navbar.css">
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../Html-table/table.html">Table</a></li>
+                <li><a href="../Html5-Basics/audio-video.html">Video</a></li>
+                <li><a href="../CSS-image/image.html">Image</a></li>
+                <li><a href="../Html-form/html5-form.html">Form</a></li>
+                <li><a href="../Html text formatting/heading-and-paragraph.html">Html</a></li>
+            </ul>
+        </nav>
+    </header>
+    <hr size="1" color="lightgray">
     <h1 class="head m-10 p-10">CSS Background color, image, repeat, position, size, relative image path</h1>
     <div class="box-1 m-10">
         <h2 class="head-2 m-10 p-10">Adding background-color, image in an html element</h2>
