added navbar in form.html

--- a/Html-form/html5-form.html
+++ b/Html-form/html5-form.html
@@ -21,9 +21,20 @@
             display: block;
         }
     </style>
+    <link rel="stylesheet" href="../CSS-Styles/navbar.css">
 </head>
 <body>
     <header>
+            <nav>
+                <ul>
+                    <li><a href="../Html-table/table.html">Table</a></li>
+                    <li><a href="../Html5-Basics/audio-video.html">Video</a></li>
+                    <li><a href="../CSS-image/image.html">Image</a></li>
+                    <li><a href="../Html-form/html5-form.html">Form</a></li>
+                    <li><a href="../Html text formatting/heading-and-paragraph.html">Html</a></li>
+                </ul>
+            </nav>
+        <hr size="1" color="lightgray">
         <h1>HTML Form label fieldset legend radio checkbox textarea reset submit</h1>
     </header>
     <main>
