added navbar in heading and paragraph.html

--- a/Html text formatting/heading-and-paragraph.html
+++ b/Html text formatting/heading-and-paragraph.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML heading and paragraph</title>
+    <link rel="stylesheet" href="../CSS-Styles/navbar.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../Html-table/table.html">Table</a></li>
+                <li><a href="../Html5-Basics/audio-video.html">Video</a></li>
+                <li><a href="../CSS-image/image.html">Image</a></li>
+                <li><a href="../Html-form/html5-form.html">Form</a></li>
+                <li><a href="../Html text formatting/heading-and-paragraph.html">Html</a></li>
+            </ul>
+        </nav>
+    </header>
+    <hr size="1" color="lightgray">
     <h1>This is the 1st heading or headline-&lt;h1&gt;&lt;/h1&gt;</h1>
     <h2>This is the 2nd heading-&lt;h2&gt;&lt;/h2&gt;</h2>
     <h3>This is the 3rd heading-&lt;h3&gt;&lt;/h3&gt;</h3>
