added a sub nav menu in the main navbar

--- a/Html text formatting/heading-and-paragraph.html
+++ b/Html text formatting/heading-and-paragraph.html
@@ -14,7 +14,13 @@
                 <li><a href="../Html5-Basics/audio-video.html">Video</a></li>
                 <li><a href="../CSS-image/image.html">Image</a></li>
                 <li><a href="../Html-form/html5-form.html">Form</a></li>
-                <li><a href="../Html text formatting/heading-and-paragraph.html">Html</a></li>
+                <li><a href="../Html text formatting/heading-and-paragraph.html">Html</a>
+                    <ul class="sub-nav">
+                        <li><a href="../Html text formatting/html-text-formatting.html">Text</a></li>
+                        <li><a href="../Html text formatting/internal-external-links.html">Link</a></li>
+                        <li><a href="../Html text formatting/list-and-buttons.html">Button</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
     </header>
