--- a/Html text formatting/heading-and-paragraph.html
+++ b/Html text formatting/heading-and-paragraph.html
@@ -15,12 +15,23 @@
                 <li><a href="../CSS-image/image.html">Image</a></li>
                 <li><a href="../Html-form/html5-form.html">Form</a></li>
                 <li><a href="../Html text formatting/heading-and-paragraph.html">Html</a>
+                    <!-- sub menu 1 -->
                     <ul class="sub-nav">
                         <li><a href="../Html text formatting/html-text-formatting.html">Text</a></li>
-                        <li><a href="../Html text formatting/internal-external-links.html">Link</a></li>
+                        
+                        <li><a href="../Html text formatting/internal-external-links.html">Link</a>
+                            <!-- sub menu 2 -->
+                            <ul class="sub-nav-2">
+                                <li><a href="../Html text formatting/html-text-formatting.html">Link1</a></li>
+                                <li><a href="../Html text formatting/internal-external-links.html">Link2</a></li>
+                                <li><a href="../Html text formatting/list-and-buttons.html">Link3</a></li>
+                            </ul>
+                        </li>
+
                         <li><a href="../Html text formatting/list-and-buttons.html">Button</a></li>
                     </ul>
                 </li>
+
             </ul>
         </nav>
     </header>
