--- a/Html text formatting/heading-and-paragraph.html
+++ b/Html text formatting/heading-and-paragraph.html
@@ -19,12 +19,12 @@
                     <ul class="sub-nav">
                         <li><a href="../Html text formatting/html-text-formatting.html">Text</a></li>
                         
-                        <li><a href="../Html text formatting/internal-external-links.html">Link</a>
+                        <li><a href="../Html text formatting/internal-external-links.html">Links</a>
                             <!-- sub menu 2 -->
                             <ul class="sub-nav-2">
-                                <li><a href="../Html text formatting/html-text-formatting.html">Link1</a></li>
-                                <li><a href="../Html text formatting/internal-external-links.html">Link2</a></li>
-                                <li><a href="../Html text formatting/list-and-buttons.html">Link3</a></li>
+                                <li><a href="../CSS-Text/Text-styling.html">CSS-Text</a></li>
+                                <li><a href="../CSS-image/image.html">CSS-image</a></li>
+                                <li><a href="../CSS-Box-Model/Box-model.html">Box-model</a></li>
                             </ul>
                         </li>
 
