used default, absolute, relative posiion in css

--- a/CSS-Psuedo/position.html
+++ b/CSS-Psuedo/position.html
@@ -21,10 +21,11 @@
         <li>Position: Fixed</li>
         <li>Position: Sticky</li>
     </ol>
+    <h3>Position - Static, Relative, Absolute:</h3>
     <div class="main-container">
         <div class="pos static">Static</div>
-        <div class="pos static">Relative</div>
-        <div class="pos static">Absolute</div>
+        <div class="pos relative">Relative</div>
+        <div class="pos absolute">Absolute</div>
     </div>
 </body>
 </html>
