added 10 extra div elements with texts

--- a/CSS-Psuedo/position.html
+++ b/CSS-Psuedo/position.html
@@ -27,5 +27,22 @@
         <div class="pos relative">Relative</div>
         <div class="pos absolute">Absolute</div>
     </div>
+    <h3>Position - Sticky and Fixed:</h3>
+    <div class="main-container">
+        <div class="pos sticky">Sticky</div>
+        <div class="pos fixed">Fixed</div>
+    </div>
+    <!-- some extra dummy texts -->
+    <div class="extra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem quod, cumque minus cum, facere provident at delectus vero fugiat, animi est error beatae ipsa! Beatae incidunt cupiditate adipisci voluptas!</div>
+    <div class="extra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem quod, cumque minus cum, facere provident at delectus vero fugiat, animi est error beatae ipsa! Beatae incidunt cupiditate adipisci voluptas!</div>
+    <div class="extra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem quod, cumque minus cum, facere provident at delectus vero fugiat, animi est error beatae ipsa! Beatae incidunt cupiditate adipisci voluptas!</div>
+    <div class="extra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem quod, cumque minus cum, facere provident at delectus vero fugiat, animi est error beatae ipsa! Beatae incidunt cupiditate adipisci voluptas!</div>
+    <div class="extra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem quod, cumque minus cum, facere provident at delectus vero fugiat, animi est error beatae ipsa! Beatae incidunt cupiditate adipisci voluptas!</div>
+    <div class="extra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem quod, cumque minus cum, facere provident at delectus vero fugiat, animi est error beatae ipsa! Beatae incidunt cupiditate adipisci voluptas!</div>
+    <div class="extra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem quod, cumque minus cum, facere provident at delectus vero fugiat, animi est error beatae ipsa! Beatae incidunt cupiditate adipisci voluptas!</div>
+    <div class="extra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem quod, cumque minus cum, facere provident at delectus vero fugiat, animi est error beatae ipsa! Beatae incidunt cupiditate adipisci voluptas!</div>
+    <div class="extra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem quod, cumque minus cum, facere provident at delectus vero fugiat, animi est error beatae ipsa! Beatae incidunt cupiditate adipisci voluptas!</div>
+    <div class="extra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem quod, cumque minus cum, facere provident at delectus vero fugiat, animi est error beatae ipsa! Beatae incidunt cupiditate adipisci voluptas!</div>
+    <div class="extra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa dolorem quod, cumque minus cum, facere provident at delectus vero fugiat, animi est error beatae ipsa! Beatae incidunt cupiditate adipisci voluptas!</div>
 </body>
 </html>
