added explanation of sticky and fixed position

--- a/CSS-Psuedo/position.html
+++ b/CSS-Psuedo/position.html
@@ -19,7 +19,9 @@
         <p>Absolute to the parent element. It completely disappears from it original place to change position.</p>
         <!-- scroll related -->
         <li>Position: Fixed</li>
+        <p>Stays in a fixed place relative to the root or html element. It completely disappears from it original place.</p>
         <li>Position: Sticky</li>
+        <p>Sticks to a position while scrolling. It also occupies its original place.</p>
     </ol>
     <h3>Position - Static, Relative, Absolute:</h3>
     <div class="main-container">
