added link to h3 in psuedo.html

--- a/CSS-Psuedo/psuedo.html
+++ b/CSS-Psuedo/psuedo.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="../CSS-Styles/psuedo.css">
 </head>
 <body>
+    <h1>CSS psuedo elements and properties</h1>
+    <hr size="1" color="lightgray">
+    <div class="container">
+        <h3><a href="">CSS hover, active, visited, focus</a></h3>
+        <p class="note">a:hover MUST come after a:link and a:visited in the CSS definition in order to be effective! a:active MUST come after a:hover in the CSS definition in order to be effective! Pseudo-class names are not case-sensitive.</p>
+        <input type="text" name="name" id="focus" placeholder="focus here">
+    </div>
     
 </body>
 </html>
