added some svg images in assets

--- a/CSS-Psuedo/psuedo.html
+++ b/CSS-Psuedo/psuedo.html
@@ -15,5 +15,13 @@
         <input type="text" name="name" id="focus" placeholder="focus here">
     </div>
     
+    <!-- stack elements and psuedo elements -->
+    <div class="container-2">
+        <h3>stack elements z-index and pseudo element</h3>
+        <div class="box"><img src="../Assets/SVG/boy.svg" alt=""></div>
+        <div class="box"><img src="../Assets/SVG/ring.svg" alt=""></div>
+        <div class="box"><img src="../Assets/SVG/water.svg" alt=""></div>
+    </div>
+
 </body>
 </html>
