--- a/CSS-Psuedo/psuedo.html
+++ b/CSS-Psuedo/psuedo.html
@@ -18,9 +18,9 @@
     <!-- stack elements and psuedo elements -->
     <div class="container-2">
         <h3>stack elements z-index and pseudo element</h3>
-        <div class="box"><img src="../Assets/SVG/boy.svg" alt=""></div>
-        <div class="box"><img src="../Assets/SVG/ring.svg" alt=""></div>
-        <div class="box"><img src="../Assets/SVG/water.svg" alt=""></div>
+        <div class="box boy"><img src="../Assets/SVG/boy.svg" alt=""></div>
+        <div class="box ring"><img src="../Assets/SVG/ring.svg" alt=""></div>
+        <div class="box water"><img src="../Assets/SVG/water.svg" alt=""></div>
     </div>
 
 </body>
