--- a/CSS-Psuedo/psuedo.html
+++ b/CSS-Psuedo/psuedo.html
@@ -14,7 +14,7 @@
         <p class="note">a:hover MUST come after a:link and a:visited in the CSS definition in order to be effective! a:active MUST come after a:hover in the CSS definition in order to be effective! Pseudo-class names are not case-sensitive.</p>
         <input type="text" name="name" id="focus" placeholder="focus here">
     </div>
-    
+    <hr size="1" color="lightgray">
     <!-- stack elements and psuedo elements -->
     <div class="container-2">
         <h3>stack elements z-index and pseudo element</h3>
