used psuedo property before after

--- a/CSS-Psuedo/psuedo.html
+++ b/CSS-Psuedo/psuedo.html
@@ -22,6 +22,8 @@
         <div class="box ring"><img src="../Assets/SVG/ring.svg" alt=""></div>
         <div class="box water"><img src="../Assets/SVG/water.svg" alt=""></div>
     </div>
-
+    <hr size="1" color="lightgray">
+    <!-- psuedo elements - before after -->
+    <h2 class="before-after">Before & after</h2>
 </body>
 </html>
