used first-line,letter selection psuedo class

--- a/CSS-Psuedo/psuedo.html
+++ b/CSS-Psuedo/psuedo.html
@@ -25,5 +25,6 @@
     <hr size="1" color="lightgray">
     <!-- psuedo elements - before after -->
     <h2 class="before-after">Before & after</h2>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur soluta in debitis iusto eum quaerat ipsam culpa voluptates eligendi, quos nulla! Beatae optio atque id repudiandae perferendis maiores doloremque tenetur.</p>
 </body>
 </html>
