--- a/CSS-Alignment/align.html
+++ b/CSS-Alignment/align.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS alignment</title>
+    <link rel="stylesheet" href="../CSS-Styles/align.css">
 </head>
 <body>
     <h1>Multiple ways to align elements</h1>
