aligned a paragraph element center

--- a/CSS-Alignment/align.html
+++ b/CSS-Alignment/align.html
@@ -15,5 +15,9 @@
     <div class="center">
         <p>Hello!!! this is Askat</p>
     </div>
+    <h3>1. Align element center</h3>
+    <div class="center center-2">
+        <p>Hello!!! this is Askat</p>
+    </div>
 </body>
 </html>
