image center align in a div with text align

--- a/CSS-Alignment/align.html
+++ b/CSS-Alignment/align.html
@@ -19,5 +19,9 @@
     <div class="center center-2">
         <p>Hello!!! this is Askat</p>
     </div>
+    <h3>1. Align image center</h3>
+    <div class="center image">
+        <img src="../Assets/images/roses.png" alt="">
+    </div>
 </body>
 </html>
