image align center without div

--- a/CSS-Alignment/align.html
+++ b/CSS-Alignment/align.html
@@ -20,8 +20,6 @@
         <p>Hello!!! this is Askat</p>
     </div>
     <h3>1. Align image center</h3>
-    <div class="center image">
-        <img src="../Assets/images/roses.png" alt="">
-    </div>
+    <img src="../Assets/images/roses.png" alt="" class="image">
 </body>
 </html>
