align text element vertically center

--- a/CSS-Alignment/align.html
+++ b/CSS-Alignment/align.html
@@ -9,17 +9,27 @@
 <body>
     <h1>Multiple ways to align elements</h1>
     <hr size="1" color="gray">
+
     <h2>Horizontally centering a text / image / element</h2>
     <hr size="1" color="gray">
     <h3>1. Align text center</h3>
     <div class="center">
         <p>Hello!!! this is Askat</p>
     </div>
-    <h3>1. Align element center</h3>
+    <h3>2. Align element center</h3>
     <div class="center center-2">
         <p>Hello!!! this is Askat</p>
     </div>
-    <h3>1. Align image center</h3>
+    <h3>3. Align image center</h3>
     <img src="../Assets/images/roses.png" alt="" class="image">
+
+    <h2>Centering text & image vertically / horizontally & vertically + horizontally inside a div</h2>
+    <hr size="1" color="gray">
+    <h3>1. Using CSS position property</h3>
+    <div class="container">
+        <div class="element-center">
+            <p>Vertically position center</p>
+        </div>
+    </div>
 </body>
 </html>
