vertical and horizontal centered element

--- a/CSS-Alignment/align.html
+++ b/CSS-Alignment/align.html
@@ -27,8 +27,13 @@
     <hr size="1" color="gray">
     <h3>1. Using CSS position property</h3>
     <div class="container">
+        <div class="vertical-center">
+            <p>Verticaly position center</p>
+        </div>
+    </div>
+    <div class="container">
         <div class="element-center">
-            <p>Vertically position center</p>
+            <p>Verticaly and Horizontaly position center</p>
         </div>
     </div>
 </body>
