image center align using position

--- a/CSS-Alignment/align.html
+++ b/CSS-Alignment/align.html
@@ -36,5 +36,11 @@
             <p>Verticaly and Horizontaly position center</p>
         </div>
     </div>
+    <h4>Centering an image using CSS positioning</h4>
+    <div class="container">
+        <div class="img-center">
+            <img src="../Assets/images/roses.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
