aligned text and image verticaly usng flexbox

--- a/CSS-Alignment/align.html
+++ b/CSS-Alignment/align.html
@@ -42,5 +42,18 @@
             <img src="../Assets/images/roses.png" alt="">
         </div>
     </div>
+
+    <h3>2. Align center using flexbox</h3>
+    <h4>Centering vertically text & image</h4>
+    <div class="container">
+        <div class="flex-vertical">
+            <p>Verticaly position center using flexbox</p>
+        </div>
+    </div>
+    <div class="container">
+        <div>
+            <img src="../Assets/images/roses.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
