text and image aligned horizontaly using flexbox

--- a/CSS-Alignment/align.html
+++ b/CSS-Alignment/align.html
@@ -55,5 +55,16 @@
             <img src="../Assets/images/roses.png" alt="">
         </div>
     </div>
+    <h4>Centering Horizontaly text & image</h4>
+    <div class="container-2">
+        <div class="flex-vertical">
+            <p>Horizontaly position center using flexbox</p>
+        </div>
+    </div>
+    <div class="container-2">
+        <div>
+            <img src="../Assets/images/roses.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
