align center vertical and horizontal using flexbox

--- a/CSS-Alignment/align.html
+++ b/CSS-Alignment/align.html
@@ -66,5 +66,16 @@
             <img src="../Assets/images/roses.png" alt="">
         </div>
     </div>
+    <h4>Centering text & image Horizontaly and verticaly</h4>
+    <div class="container-2 container-3">
+        <div class="flex-vertical">
+            <p>Horizontaly and Vertical position center using flexbox</p>
+        </div>
+    </div>
+    <div class="container-2 container-3">
+        <div>
+            <img src="../Assets/images/roses.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
