--- a/CSS-Grid/grid.html
+++ b/CSS-Grid/grid.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="../CSS-Styles/grid.css">
 </head>
 <body>
-    
+    <h1>CSS Grid layout template columns grid gap</h1>
+    <div class="container">
+        <div class="items">Item-1</div>
+        <div class="items">Item-2</div>
+        <div class="items">Item-3</div>
+        <div class="items">Item-4</div>
+        <div class="items">Item-5</div>
+        <div class="items">Item-6</div>
+        <div class="items">Item-7</div>
+        <div class="items">Item-8</div>
+        <div class="items">Item-9</div>
+        <div class="items">Item-10</div>
+        <div class="items">Item-11</div>
+        <div class="items">Item-12</div>
+        <div class="items">Item-13</div>
+        <div class="items">Item-14</div>
+        <div class="items">Item-15</div>
+        <div class="items">Item-16</div>
+        <div class="items">Item-17</div>
+        <div class="items">Item-18</div>
+        <div class="items">Item-19</div>
+        <div class="items">Item-20</div>
+    </div>
 </body>
 </html>
