--- a/Calendar/calendar.html
+++ b/Calendar/calendar.html
@@ -11,18 +11,24 @@
             box-sizing: border-box;
             font-family: sans-serif;
         }
+        .t-center{
+            text-align: center;
+        }
+        .m-tb{
+            margin: 20px 0px;
+        }
         .calendar{
             width: 700px;
             /* height: 500px; */
             margin: 0 auto;
-            border: 2px solid rebeccapurple;
+            /* border: 2px solid rebeccapurple; */
             display: grid;
             grid-template-columns: repeat(7, 1fr);
             row-gap: 20px;
             column-gap: 20px;
         }
-        .days{
-            border: 2px solid #2f2f2f;
+        .dates{
+            /* border: 2px solid #2f2f2f; */
             color: #2f2f2f;
             background-color: #fef3e5;
             display: flex;
@@ -33,46 +39,68 @@
             /* font-weight: bold; */
             border-radius: 20px;
         }
+        .days{
+            padding: 10px;
+            background-color: aliceblue;
+        }
+        .dates:hover{
+            background-color: #2f2f2f;
+            color: #fef3e5;
+        }
+        .today{
+            /* background-color: #2f2f2f;
+            color: #fef3e5; */
+            border: 2px solid #2f2f2f;
+        }
     </style>
 </head>
 <body>
-    <h1>Calendar using css grid and flex box</h1>
+    <h1 class="t-center m-tb">Calendar using css grid and flex box</h1>
+    <hr size="1" color="lightgray">
+    <h3 class="t-center m-tb">SEPTEMBER 2, 2023</h3>
     <div class="calendar">
-        <div class="days">27</div>
-        <div class="days">28</div>
-        <div class="days">29</div>
-        <div class="days">30</div>
-        <div class="days">31</div>
-        <div class="days">1</div>
-        <div class="days">2</div>
-        <div class="days">3</div>
-        <div class="days">4</div>
-        <div class="days">5</div>
-        <div class="days">6</div>
-        <div class="days">7</div>
-        <div class="days">8</div>
-        <div class="days">9</div>
-        <div class="days">10</div>
-        <div class="days">11</div>
-        <div class="days">12</div>
-        <div class="days">13</div>
-        <div class="days">14</div>
-        <div class="days">15</div>
-        <div class="days">16</div>
-        <div class="days">17</div>
-        <div class="days">18</div>
-        <div class="days">19</div>
-        <div class="days">20</div>
-        <div class="days">21</div>
-        <div class="days">22</div>
-        <div class="days">23</div>
-        <div class="days">24</div>
-        <div class="days">25</div>
-        <div class="days">26</div>
-        <div class="days">27</div>
-        <div class="days">28</div>
-        <div class="days">29</div>
-        <div class="days">30</div>
+        <div class="days dates" title="Sunday">S</div>
+        <div class="days dates" title="Monday">M</div>
+        <div class="days dates" title="Tuesday">T</div>
+        <div class="days dates" title="Wednesday">W</div>
+        <div class="days dates" title="Thursday">T</div>
+        <div class="days dates" title="Friday">F</div>
+        <div class="days dates" title="Saturday">S</div>
+        <div class="dates">27</div>
+        <div class="dates">28</div>
+        <div class="dates">29</div>
+        <div class="dates">30</div>
+        <div class="dates">31</div>
+        <div class="dates">1</div>
+        <div class="dates today">2</div>
+        <div class="dates">3</div>
+        <div class="dates">4</div>
+        <div class="dates">5</div>
+        <div class="dates">6</div>
+        <div class="dates">7</div>
+        <div class="dates">8</div>
+        <div class="dates">9</div>
+        <div class="dates">10</div>
+        <div class="dates">11</div>
+        <div class="dates">12</div>
+        <div class="dates">13</div>
+        <div class="dates">14</div>
+        <div class="dates">15</div>
+        <div class="dates">16</div>
+        <div class="dates">17</div>
+        <div class="dates">18</div>
+        <div class="dates">19</div>
+        <div class="dates">20</div>
+        <div class="dates">21</div>
+        <div class="dates">22</div>
+        <div class="dates">23</div>
+        <div class="dates">24</div>
+        <div class="dates">25</div>
+        <div class="dates">26</div>
+        <div class="dates">27</div>
+        <div class="dates">28</div>
+        <div class="dates">29</div>
+        <div class="dates">30</div>
     </div>
 </body>
 </html>
