used em as measuring unit

--- a/Calendar/calendar.html
+++ b/Calendar/calendar.html
@@ -18,14 +18,17 @@
             margin: 20px 0px;
         }
         .calendar{
-            width: 700px;
+            /* width: 700px; */
+            width: 70%;
             /* height: 500px; */
             margin: 0 auto;
             /* border: 2px solid rebeccapurple; */
             display: grid;
             grid-template-columns: repeat(7, 1fr);
-            row-gap: 20px;
-            column-gap: 20px;
+            /* row-gap: 20px; */
+            row-gap: 1em;
+            /* column-gap: 20px; */
+            column-gap: 1em;
         }
         .dates{
             /* border: 2px solid #2f2f2f; */
@@ -34,13 +37,17 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 20px;
-            font-size: 20px;
+            /* padding: 20px; */
+            padding: 1em;
+            /* font-size: 20px; */
+            font-size: 1em;
             /* font-weight: bold; */
-            border-radius: 20px;
+            /* border-radius: 20px; */
+            border-radius: 1em;
         }
         .days{
-            padding: 10px;
+            /* padding: 10px; */
+            padding: 1em;
             background-color: aliceblue;
         }
         .dates:hover{
