linked media.css to media.html

--- a/Media-query/media.html
+++ b/Media-query/media.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS media query</title>
+    <link rel="stylesheet" href="../CSS-Styles/media.css">
 </head>
 <body>
     <!-- .container>.food*12>img[src="../Assets/images/ham-burger.png" alt="image of a ham burger"]+h3{Ham Burger $}+p{Price - \$$00}+p>lorem -->
